--- a/templates/home.html
+++ b/templates/home.html
@@ -12,7 +12,7 @@
                     <div class="card-body">
                         <h5 class="card-title">Fahrzeugauszeichnung</h5>
                         <p class="card-text">Erstellen Sie professionelle Fahrzeugauszeichnungen für Ihren Fahrzeugbestand.</p>
-                        <a href="{{ url_for('car_form') }}" class="btn btn-primary">Zur Fahrzeugauszeichnung</a>
+                        <a href="{{ url_for('views.car_form') }}" class="btn btn-primary">Zur Fahrzeugauszeichnung</a>
                     </div>
                 </div>
             </div>
