--- a/templates/base.html
+++ b/templates/base.html
@@ -47,8 +47,8 @@
                            href="{{ url_for('home') }}">Homepage</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link {% if request.endpoint == 'car_form' %}active{% endif %}"
-                           href="{{ url_for('car_form') }}">Fahrzeugauszeichnung</a>
+                        <a class="nav-link {% if request.endpoint == 'views.car_form' %}active{% endif %}"
+                           href="{{ url_for('views.car_form') }}">Fahrzeugauszeichnung</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link {% if request.endpoint == 'intake_form' %}active{% endif %}"
